--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors!</title>
-  <script src="rock-paper-scissors.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="rock-paper-scissors.js" defer></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="score">0 - 0</div>
+    <div class="buttons">
+      <button class="game-buttons" id="rock">Rock</button>
+      <button class="game-buttons" id="paper">Paper</button>
+      <button class="game-buttons" id="scissors">Scissors</button>
+    </div>
+    <div class="result"></div>
+    <div class="winner"></div>
+  </div>
 </body>
 </html>
